# pyML

./: .gitignore  LICENSE.spdx  README.md  backprop.ipynb  backprop.py  backpropagation.ipynb  decision_tree.ipynb  decision_tree.py  feedforward.ipynb  kmeans.ipynb  kmeans.py  knn.ipynb  knn.py  linear_regression.ipynb  linear_regression.py  log_regression.ipynb  logistic_regression.ipynb  model_comparison.ipynb  model_comparison.py  naive_bayes.ipynb  naive_bayes.py  optimization.ipynb  optimization.py  perceptron.ipynb  perceptron.py  pyproject.toml  svm.ipynb  utility.py
.devcontainer/: devcontainer.json
data/: forestfires.csv
utility/: __init__.py  backpropagation.py  ffnn.py  functions.py  logistic.py  perceptron.py  svm.py
