[tool.poetry]
name = "pyml"
version = "0.1.0"
description = "Simple project to implement various ML techniques"
authors = ["T. E. Kalayci"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
# DS Libraries
easydict = "*"
numpy = "*"
pandas = "*"
plydata = "*"
pysistence = "*"
requests = "*"
scipy = "*"
scikit-learn = "*"
# Visualization
matplotlib = "*"
seaborn = "*"
plotly = "*"
# JupyterLab
jupyter = "*"
jupyterlab = "^4.0"
ipympl = "*"
ipywidgets = "*"
jupyterlab-widgets = "*"
jupyterlab_code_formatter = "*"
black = "*"
isort = "*"
lckr-jupyterlab-variableinspector = "*"
jupyterlab-dash = "*"
jupyterlab-execute-time = "*"
jupyterlab-git = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
