[tool.poetry]
name = "pyml"
version = "0.1.0"
description = "Simple project to implement various ML techniques"
authors = ["T. E. Kalayci"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
# DS Libraries
numpy = "*"
pandas = "*"
requests = "*"
scipy = "*"
scikit-learn = "*"
# Visualization
dash = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"
# JupyterLab
jupyter = "*"
jupyterlab = "^4.0"
notebook = "*"
ipympl = "*"
ipywidgets = "*"
jupyterlab-widgets = "*"
jupyterlab-code-formatter = "*"
lckr-jupyterlab-variableinspector = "*"
jupyterlab-execute-time = "*"
jupyterlab-git = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
