[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "T. E. Kalayci"},
]
license = {text = "Apache-2.0"}
name = "pyml"
version = "0.1.0"
description = "Simple project to implement various ML techniques"

requires-python = "<4.0,>=3.12"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "scipy",
    "scikit-learn",
    "dash",
    "matplotlib",
    "seaborn",
    "plotly",
    "jupyter",
    "jupyterlab<5.0,>=4.0",
    "notebook",
    "ipympl",
    "ipywidgets",
    "jupyterlab-widgets",
    "jupyterlab-code-formatter",
    "lckr-jupyterlab-variableinspector",
    "jupyterlab-execute-time",
    "jupyterlab-git",
]

[dependency-groups]
dev = [
    "autopep8",
    "black",
    "isort",
]
